# STM32CubeF4

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: gcc-toolchain.cmake
test_package/: CMakeLists.txt  conanfile.py  main.c
